--- a/generators/app/templates/csquotes.example.en.tex
+++ b/generators/app/templates/csquotes.example.en.tex
@@ -2,7 +2,7 @@
 
 <%- bexample %>
 Please use the \enquote{enquote command} to quote something.
-Quoting with "`quote"' also works.
+Quoting with "`quote"' or ``quote'' also works.
 
 <% if (tweak_outerquote == "outerquote")  { -%>
 The feature "MakeOuterQuote" is also enabled, which enables "plain" double quotes to correctly enquote.
