--- a/generators/app/templates/hyphenation.example.en.tex
+++ b/generators/app/templates/hyphenation.example.en.tex
@@ -6,7 +6,7 @@ It might be necessary to tweak the hyphenations nevertheless.
 Here are some hints:
 
 <%- bexample %>
-In case you write <% if (enquotes == 'csquotes') { %>\enquote{<% } else if (enquotes == 'textcmds') { %>\qq{<% } else { %>``<% } %>application-specific<% if ((enquotes == 'csquotes') || (enquotes == 'textcmds')) { %>}<% } else { %>''<% } %>, then the word will only be hyphenated at the dash.
+In case you write <%- bquote %>application-specific<%- equote %>, then the word will only be hyphenated at the dash.
 You can also write \verb1applica\allowbreak{}tion-specific1 (result: applica\allowbreak{}tion-specific), but this is much more effort.
 
 <% if (tweak_outerquote == "outerquote")  { -%>
@@ -15,7 +15,8 @@ Since we use the quote sign for automatic quoation, this is not possible anymore
 Please use the command \verb1\hydash1 for the same purpose.
 Example: \verb1application\hydash specific1 (result: application\hydash specific).
 <% } else { -%>
-You can now write words containing hyphens which are hyphenated (\verb1application"=specific1 gets application"=specific) at other places in the word.
+You can now write words containing hyphens which are hyphenated at other places in the word.
+For instance, \verb1application"=specific1 gets application"=specific.
 This is enabled by an additional configuration of the babel package.
 <% } -%>
 <%- eexample %>
