--- a/generators/app/templates/listings.example.en.tex
+++ b/generators/app/templates/listings.example.en.tex
@@ -43,3 +43,22 @@ One can also typeset JSON as shown in <% if (cleveref) { %>\cref<% } else { %>Li
 }
 \end{lstlisting}
 <%- eexample %>
+
+Java is also possible as shown in <% if (cleveref) { %>\cref<% } else { %>Listing~<% } %>{lst:flJava}.
+
+<%- bexample %>
+\begin{lstlisting}[
+  % one can adjust spacing here if required
+  % aboveskip=2.5\baselineskip,
+  % belowskip=-.8\baselineskip,
+  caption={Example Java Listing},
+  label=flJava,
+  language=Java,
+  float]
+public class Hello {
+    public static void main (String[] args) {
+        System.out.println("Hello World!");
+    }
+}
+\end{lstlisting}
+<%- eexample %>
