--- a/generators/app/templates/paralist.example.en.tex
+++ b/generators/app/templates/paralist.example.en.tex
@@ -44,7 +44,8 @@ With paralist, one can even have all items typset after each other and have them
 
 <%- bexample %>
 \begin{inparaenum}
-\item Item One
-\item Item Two
+\item All these items...
+\item ...appear in one line
+\item This is enabled by the paralist package.
 \end{inparaenum}
 <%- eexample %>
