--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -65,7 +65,7 @@
 
 <% if (enquotes == 'csquotes')  { %><%- include('csquotes.preamble.en.tex', this); %><% } -%>
 
-<%- include('diagbox.preamble.en.tex', this); %>
+<%- include('diagbox.preamble.en.tex', this); -%>
 
 <%# Required for package pdfcomment later -%>
 \usepackage{xcolor}
@@ -92,10 +92,6 @@
 % In the bibliography, references have to be formatted as 1., 2., ... not [1], [2], ...
 \renewcommand{\bibnumfmt}[1]{#1.}
 
-<% if (latexcompiler !== 'lualatex') { -%>
-<%#
-  does not work when using luatex
-  see: https://tex.stackexchange.com/q/419288/9075 -%>
 % Prepare more space-saving rendering of the bibliography
 % Source: https://tex.stackexchange.com/a/280936/9075
 \SetExpansion
@@ -105,7 +101,6 @@
   step = 5 ]
 { encoding = {OT1,T1,TS1} }
 { }
-<% } -%>
 <% } -%>
 <% if (todo == 'pdfcomment')  { %><%- include('pdfcomment.preamble.en.tex', this); %><% } -%>
 
@@ -131,7 +126,7 @@
 \usepackage{mwe}
 <% } -%>
 
-<%- include('cleveref.preamble.en.tex', this); %>
+<%- include('powerset.preamble.en.tex', this); %>
 
 % correct bad hyphenation here
 \hyphenation{op-tical net-works semi-conduc-tor}
@@ -167,6 +162,60 @@
 <% } -%>
 
 \begin{document}
+<% if (documentclass == 'lncs') { -%>
+
+\title{Paper Title}
+% If Title is too long, use \titlerunning
+%\titlerunning{Short Title}
+
+% Single insitute
+\author{Firstname Lastname \and Firstname Lastname}
+
+% If there are too many authors, use \authorrunning
+%\authorrunning{First Author et al.}
+
+\institute{Institute}
+
+%% Multiple insitutes - ALTERNATIVE to the above
+% \author{%
+%     Firstname Lastname\inst{1} \and
+%     Firstname Lastname\inst{2}
+% }
+%
+%If there are too many authors, use \authorrunning
+%  \authorrunning{First Author et al.}
+%
+%  \institute{
+%      Insitute 1\\
+%      \email{...}\and
+%      Insitute 2\\
+%      \email{...}
+%}
+
+\maketitle
+
+\begin{abstract}
+  \lipsum[1]
+\end{abstract}
+
+\begin{keywords}
+  keyword1, keyword2
+\end{keywords}
+
+\section{Introduction}
+\label{sec:intro}
+\lipsum[1-3]\todo{Refine me}
+
+The remainder of the paper starts with a presentation of related work (\cref{sec:relatedwork}).
+<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (\cref{sec:hints}).<% } -%>
+Finally, a conclusion is drawn and outlook on future work is made (\cref{sec:outlook}).
+
+\section{Related Work}
+\label{sec:relatedwork}
+
+Winery~\cite{Winery} is a graphical \commentontext{modeling}{modeling with one ``l'', because of AE} tool.
+The whole idea of TOSCA is explained by \citet{Binz2009}.
+<% } -%>
 
 <% if (examples) { -%>
 <%= heading1 %>{LaTeX Hinweise}
@@ -193,6 +242,7 @@
   listing options={%
     frame=none,
     language={[LaTeX]TeX},
+    escapeinside={},
     firstline=\the\LTGbeginlineexample,
     lastline=\the\LTGendlineexample,
     firstnumber=\the\LTGbeginlineexample,
@@ -215,10 +265,42 @@ Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiel
 <%- include('siunitx.example.en.tex', this); %>
 <% if (enquotes == 'csquotes')  { %><%- include('csquotes.example.en.tex', this); %><% } -%>
 <% if (enquotes == 'plainlatex')  { %><%- include('plainlatex.enquotes.example.de.tex', this); %><% } -%>
-<%- include('paralist.example.en.tex', this); %>
+<%- include('cleveref.example.en.tex', this); %>
 <%- include('figure.example.de.tex', this); %>
-<%- include('listings.example.de.tex', this); %>
 <%- include('tables.example.en.tex', this); %>
+<%- include('listings.example.de.tex', this); %>
+<%- include('paralist.example.en.tex', this); %>
+<%- include('otherfeatures.example.en.tex', this); %>
+<% } -%>
+
+<% if (documentclass == 'lncs') { -%>
+\section{Zusammenfassung und Ausblick}
+\label{sec:outlook}
+\lipsum[1-2]
+
+\subsubsection*{Danksagungen}
+\ldots
+
+In the bibliography, use \texttt{\textbackslash textsuperscript} for <%- bquote %>st<%- equote %>, <%- bquote %>nd<%- equote %>, \ldots:
+E.g., <%- bquote %>The 2\textsuperscript{nd} conference on examples<%- equote %>.
+When you use \href{https://www.jabref.org}{JabRef}, you can use the clean up command to achieve that.
+See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the cleanup functionality.
+
+\renewcommand{\bibsection}{\section*{Literatur}} % requried for natbib to have "References" printed and as section*, not chapter*
+% Use natbib compatbile splncsnat style.
+% It does provide all features of splncs03, but is developed in a clean way.
+% Source: http://phaseportrait.blogspot.de/2011/02/natbib-compatible-bibtex-style-bst-file.html
+\bibliographystyle{splncsnat}
+\begingroup
+  \microtypecontext{expansion=sloppy}
+  \small % ensure correct font size for the bibliography
+  \bibliography{bibliography}
+\endgroup
+
+% Enfore empty line after bibliography
+\ \\
+%
+Alle Links wurden zuletzt am 29.03.2021 geprüft.
 <% } -%>
 
 \end{document}
