--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -102,7 +102,11 @@
 { encoding = {OT1,T1,TS1} }
 { }
 <% } -%>
-<% if (todo == 'pdfcomment')  { %><%- include('pdfcomment.preamble.en.tex', this); %><% } -%>
+<% if (todo == 'pdfcomment') { -%>
+<%- include('pdfcomment.preamble.en.tex', this); %>
+<% } else { -%>
+<%- include('plainlatextodo.preamble.en.tex', this); %>
+<% } -%>
 
 % Fußnoten unter Gleitumgebungen ("floats") platzieren
 % Quelle: https://tex.stackexchange.com/a/32993/9075
