--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -109,7 +109,11 @@
 { encoding = {OT1,T1,TS1} }
 { }
 <% } -%>
-<% if (todo == 'pdfcomment')  { %><%- include('pdfcomment.preamble.en.tex', this); %><% } -%>
+<% if (todo == 'pdfcomment') { -%>
+<%- include('pdfcomment.preamble.en.tex', this); %>
+<% } else { -%>
+<%- include('plainlatextodo.preamble.en.tex', this); %>
+<% } -%>
 
 % Put footnotes below floats
 % Source: https://tex.stackexchange.com/a/32993/9075
