--- a/generators/app/templates/diagbox.example.en.tex
+++ b/generators/app/templates/diagbox.example.en.tex
@@ -1,5 +1,9 @@
 <%- bexample %>
 % Source: https://tex.stackexchange.com/a/468994/9075
+\begin{table}
+\caption{Table with diagonal line}
+\label{tab:diag}
+\begin{center}
 \begin{tabular}{|l|c|c|}
 \hline
 \diagbox[width=10em]{Diag\\Column Head I}{Diag Column\\Head II} & Second & Third \\
@@ -7,4 +11,6 @@
 & foo & bar \\
 \hline
 \end{tabular}
-<%- eexample %>
+\end{center}
+\end{table}
+ <%- eexample %>
