--- a/generators/app/templates/figure.example.en.tex
+++ b/generators/app/templates/figure.example.en.tex
@@ -10,7 +10,7 @@ Figure~\ref{fig:label} shows something interesting.
 \begin{figure}
   \centering
   \includegraphics[width=.8\textwidth]{example-image-golden}
-  \caption{Simple Figure. \cite[based on][]{mwe}}
+  \caption[Simple Figure]{Simple Figure. Based on \citet{mwe}.}
   \label{fig:label}
 \end{figure}
 <%- eexample %>
