--- a/generators/app/templates/listings.example.en.tex
+++ b/generators/app/templates/listings.example.en.tex
@@ -52,7 +52,7 @@ Java is also possible as shown in <% if (cleveref) { %>\cref<% } else { %>Listin
   % aboveskip=2.5\baselineskip,
   % belowskip=-.8\baselineskip,
   caption={Example Java Listing},
-  label=flJava,
+  label=lst:flJava,
   language=Java,
   float]
 public class Hello {
