--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -224,7 +224,7 @@
 \lipsum[1-3]\todo{Refine me}
 
 The remainder of the paper starts with a presentation of related work (\cref{sec:relatedwork}).
-<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (\cref{sec:hints}).<% } -%>
+<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (\cref{sec:latexhints}).<% } -%>
 Finally, a conclusion is drawn and outlook on future work is made (\cref{sec:outlook}).
 
 \section{Related Work}
