Make \hydash "globally" available

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -145,6 +145,13 @@
 \newcommand{\eg}{e.\,g.,\ }
 \newcommand{\ie}{i.\,e.,\ }
 
+% Enable hyphenation at other places as the dash.
+% Example: applicaiton\hydash specific
+\makeatletter
+\newcommand{\hydash}{\penalty\@M-\hskip\z@skip}
+% Definition of "= taken from http://mirror.ctan.org/macros/latex/contrib/babel-contrib/german/ngermanb.dtx
+\makeatother
+
 % correct bad hyphenation here
 \hyphenation{op-tical net-works semi-conduc-tor}
 <% if (documentclass == 'lncs') { -%>
