--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -132,6 +132,13 @@
 
 <%- include('powerset.preamble.en.tex', this); %>
 
+% Enable hyphenation at other places as the dash.
+% Example: applicaiton\hydash specific
+\makeatletter
+\newcommand{\hydash}{\penalty\@M-\hskip\z@skip}
+% Definition of "= taken from http://mirror.ctan.org/macros/latex/contrib/babel-contrib/german/ngermanb.dtx
+\makeatother
+
 % correct bad hyphenation here
 \hyphenation{op-tical net-works semi-conduc-tor}
 <% if (documentclass == 'lncs') { -%>
