Add line stretch for thesis template

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -109,6 +109,11 @@ SmallCapsFeatures={Numbers=OldStyle}]{NewCMMono10-Regular.otf}
     qt=false%
 ]{cfr-lm}
 <% } -%>
+<% if (documentclass == 'scientific-thesis') { -%>
+
+\usepackage{setspace}
+\setstretch{1.2}
+<% } -%>
 
 % Has to be loaded AFTER any font packages. See https://tex.stackexchange.com/a/2869/9075.
 \usepackage[T1]{fontenc}
