--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -238,7 +238,7 @@ Finally, a conclusion is drawn and outlook on future work is made (\cref{sec:out
 \label{sec:relatedwork}
 
 Winery~\cite{Winery} is a graphical \commentontext{modeling}{modeling with one ``l'', because of AE} tool.
-The whole idea of TOSCA is explained by \citet{Binz2009}.
+The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } else { %>Binz et al.~\cite<% } %>{Binz2009}.
 <% } -%>
 
 <% if (examples) { -%>
