--- a/generators/app/templates/hyperref.preamble.de.tex
+++ b/generators/app/templates/hyperref.preamble.de.tex
@@ -12,3 +12,10 @@
 
 % Enable correct jumping to figures when referencing
 \usepackage[all]{hypcap}
+
+% Hint by https://tex.stackexchange.com/a/193370/9075 to suppress strange outputs of the babel package
+% Example strange output: Package babel Info: Redefining ngerman shorthand "|
+\usepackage{etoolbox}
+\makeatletter
+\patchcmd{\@decl@short}{\bbl@info}{\@gobble}{}{}
+\makeatother
