--- a/generators/app/templates/figure.example.en.tex
+++ b/generators/app/templates/figure.example.en.tex
@@ -9,8 +9,9 @@ Figure~\ref{fig:label} shows something interesting.
 
 \begin{figure}
   \centering
-  Place your figure here
-  \caption{The example figure.}
+  \includegraphics[width=.8\textwidth]{example-image-golden}
+  \caption[Simple Figure]{Simple Figure. Based on <% if (available.citet) { %>\citet<% } else { %>Scharrer~\cite<% } %>{mwe}.}
   \label{fig:label}
 \end{figure}
 <%- eexample %>
+<%- include('floatflt.example.en.tex', this); %>
