--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -1,22 +1,32 @@
+<% if (documentclass == 'lncs') { -%>
+% Dieses Template wurde mit der "LLNCS DOCUMENT CLASS -- version 2.20 (10-Mar-2018)" getestet
+
+<% } -%>
 % !TeX spellcheck = de-DE
 % !TeX encoding = utf8
 % !TeX program = <%= latexcompiler %>
 % !BIB program = <%= bibtextool %>
 % -*- coding:utf-8 mod:LaTeX -*-
+<% if (documentclass == 'scientific-thesis') { -%>
 
-<% if (documentclass === 'scientific-thesis') { -%>
 % The following package allows \\ at the title page
 % For more information see https://github.com/latextemplates/scientific-thesis-cover/issues/4
 \RequirePackage{kvoptions-patch}
 <% } -%>
-
 <% if (latexcompiler !== 'lualatex') { -%>
+
 % Neue deutsche Trennmuster
 % Siehe http://www.ctan.org/pkg/dehyph-exptl und http://projekte.dante.de/Trennmuster/WebHome
 % Nur für pdflatex, nicht für lualatex
 \RequirePackage[ngerman=ngerman-x-latest]{hyphsubst}
 <% } -%>
 
+<% if (documentclass == 'lncs') { -%>
+% "runningheads" zeigt Author + Titel auf jeder Seite.
+% Diese Option nach Aufforderung durch die Herausgeber entfernen.
+% Während des Schreibens und das Review des Papers hilft das, um z.B. auf konkrete Seitenzahlen einfach verweisen zu können.
+\documentclass[ngerman,runningheads,a4paper]{llncs}[2018/03/10]
+<% } else {-%>
 \documentclass[
   % fontsize=11pt is the standard
   % ()Aus scrguide.pdf - der Dokumentation von KOMA-Script)
@@ -26,6 +36,7 @@
   % oder Groß- oder Kleinbuchstaben gearbeitet, so steht am Ende aller Gliederungsnummern ein
   % abschließender Punkt (siehe [DUD96, R4])
   numbers=autoendperiod,
+  ngerman,  % Neue deutsche Rechtschreibung; der Parameter wird an andere Pakete weiter gegeben
   a4paper,  % Standard format - only KOMAScript uses paper=a4 - https://tex.stackexchange.com/a/61044/9075
   twoside,  % we are optimizing for both screen and two-side printing. So the page numbers will jump, but the content is configured to stay in the middle (by using the geometry package)
   bibliography=totoc,
@@ -37,9 +48,6 @@
   %               draft    % um zu sehen, wo noch nachgebessert werden muss - wichtig, da Bindungskorrektur mit drin
   draft=false
 ]{scrbook}
-
-<% if (latexcompiler == "pdflatex") { -%>
-\usepackage{cmap}
 <% } -%>
 
 % backticks (`) werden als solches in verbatim-Umgebungen dargestellt
@@ -53,8 +61,60 @@
 <%- include('url.preamble.de.tex', this); %>
 <%- include('font.preamble.en.tex', this); %>
 <%- include('microtype.preamble.de.tex', this); %>
+\usepackage{graphicx}
+
+<% if (enquotes == 'csquotes')  { %><%- include('csquotes.preamble.en.tex', this); %><% } -%>
+
+<%- include('diagbox.preamble.en.tex', this); -%>
+
+<%# Required for package pdfcomment later -%>
+\usepackage{xcolor}
+
 <%- include('listings.preamble.de.tex', this); %>
-<%- include('hyperref.preamble.en.tex', this); %>
+<%- include('booktabs.preamble.en.tex', this); %>
+<%- include('paralist.preamble.en.tex', this); %>
+<% if (documentclass == 'lncs')  { -%>
+<%- include('floatflt.preamble.en.tex', this); %>
+% Bibliopgraphy enhancements
+%  - enable \cite[prenote][]{ref}
+%  - enable \cite{ref1,ref2}
+% Alternative: \usepackage{cite}, which enables \cite{ref1, ref2} only (otherwise: Error message: "White space in argument")
+
+% Doc: http://texdoc.net/natbib
+\usepackage[%
+  square,        % for square brackets
+  comma,         % use commas as separators
+  numbers,       % for numerical citations;
+%  sort,          % orders multiple citations into the sequence in which they appear in the list of references;
+  sort&compress, % as sort but in addition multiple numerical citations
+                 % are compressed if possible (as 3-6, 15);
+]{natbib}
+% In the bibliography, references have to be formatted as 1., 2., ... not [1], [2], ...
+\renewcommand{\bibnumfmt}[1]{#1.}
+
+% Prepare more space-saving rendering of the bibliography
+% Source: https://tex.stackexchange.com/a/280936/9075
+\SetExpansion
+[ context = sloppy,
+  stretch = 30,
+  shrink = 60,
+  step = 5 ]
+{ encoding = {OT1,T1,TS1} }
+{ }
+<% } -%>
+<% if (todo == 'pdfcomment') { -%>
+<%- include('pdfcomment.preamble.en.tex', this); %>
+<% } else { -%>
+<%- include('plainlatextodo.preamble.en.tex', this); %>
+<% } -%>
+
+% Fußnoten unter Gleitumgebungen ("floats") platzieren
+% Quelle: https://tex.stackexchange.com/a/32993/9075
+\usepackage{stfloats}
+\fnbelowfloat
+
+<%- include('siunitx.preamble.en.tex'); %>
+<%- include('hyperref.preamble.de.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.de.tex', this); %><% } -%>
 
 <% if (useExampleEnvironment) { -%>
@@ -62,8 +122,111 @@
 \usepackage{tcolorbox}
 \tcbuselibrary{listings}
 <% } -%>
+<% if (examples) { -%>
+
+% For demonstration purposes only
+% These packages can be removed when all examples have been deleted
+\usepackage[math]{blindtext}
+\usepackage{mwe}
+<% } -%>
+
+<%- include('powerset.preamble.en.tex', this); %>
+
+% Enable hyphenation at other places as the dash.
+% Example: applicaiton\hydash specific
+\makeatletter
+\newcommand{\hydash}{\penalty\@M-\hskip\z@skip}
+% Definition of "= taken from http://mirror.ctan.org/macros/latex/contrib/babel-contrib/german/ngermanb.dtx
+\makeatother
+
+% correct bad hyphenation here
+\hyphenation{op-tical net-works semi-conduc-tor}
+<% if (documentclass == 'lncs') { -%>
+
+% Add copyright
+% Do that for the final version or if you send it to colleagues
+\iffalse
+  %state: intended|submitted|llncs
+  %you can add "crop" if the paper should be cropped to the format Springer is publishing
+  \usepackage[intended]{llncsconf}
+
+  \conference{name of the conference}
+
+  %in case of "llncs" (final version!)
+  %example: llncs{Anonymous et al. (eds). \emph{Proceedings of the International Conference on \LaTeX-Hacks}, LNCS~42. Some Publisher, 2016.}{0042}
+  \llncs{book editors and title}{0042} %% 0042 is the start page
+\fi
+<% } -%>
+<% if (latexcompiler == "pdflatex") { -%>
+
+% Enable copy and paste of text from the PDF
+% Only required for pdflatex. It "just works" in the case of lualatex.
+% Alternative: cmap or mmap package
+% mmap enables mathematical symbols, but does not work with the newtx font set
+% See: https://tex.stackexchange.com/a/64457/9075
+% Other solutions outlined at http://goemonx.blogspot.de/2012/01/pdflatex-ligaturen-und-copynpaste.html and http://tex.stackexchange.com/questions/4397/make-ligatures-in-linux-libertine-copyable-and-searchable
+% Trouble shooting outlined at https://tex.stackexchange.com/a/100618/9075
+%
+% According to https://tex.stackexchange.com/q/451235/9075 this is the way to go
+\input glyphtounicode
+\pdfgentounicode=1
+<% } -%>
 
 \begin{document}
+<% if (documentclass == 'lncs') { -%>
+
+\title{Paper Title}
+% If Title is too long, use \titlerunning
+%\titlerunning{Short Title}
+
+% Single insitute
+\author{Firstname Lastname \and Firstname Lastname}
+
+% If there are too many authors, use \authorrunning
+%\authorrunning{First Author et al.}
+
+\institute{Institute}
+
+%% Multiple insitutes - ALTERNATIVE to the above
+% \author{%
+%     Firstname Lastname\inst{1} \and
+%     Firstname Lastname\inst{2}
+% }
+%
+%If there are too many authors, use \authorrunning
+%  \authorrunning{First Author et al.}
+%
+%  \institute{
+%      Insitute 1\\
+%      \email{...}\and
+%      Insitute 2\\
+%      \email{...}
+%}
+
+\maketitle
+
+\begin{abstract}
+  \lipsum[1]
+\end{abstract}
+
+\begin{keywords}
+  keyword1, keyword2
+\end{keywords}
+
+\section{Introduction}
+\label{sec:intro}
+\lipsum[1-3]\todo{Refine me}
+
+The remainder of the paper starts with a presentation of related work (\cref{sec:relatedwork}).
+<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (\cref{sec:latexhints}).<% } -%>
+Finally, a conclusion is drawn and outlook on future work is made (\cref{sec:outlook}).
+
+\section{Related Work}
+\label{sec:relatedwork}
+
+Winery~\cite{Winery} is a graphical \commentontext{modeling}{modeling with one ``l'', because of AE} tool.
+The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } else { %>Binz et al.~\cite<% } %>{Binz2009}.
+<% } -%>
 
 <% if (examples) { -%>
 <%= heading1 %>{LaTeX Hinweise}
@@ -88,7 +251,9 @@
   left=8mm,
   title=Zugehöriger \LaTeX{}-Quelltext aus \texttt{\currfilepath},
   listing options={%
+    frame=none,
     language={[LaTeX]TeX},
+    escapeinside={},
     firstline=\the\LTGbeginlineexample,
     lastline=\the\LTGendlineexample,
     firstnumber=\the\LTGbeginlineexample,
@@ -107,8 +272,46 @@
 Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiele vorliegen hat, um sofort loszulegen.
 
 <%- include('paragraphs.example.de.tex', this); %>
+<%- include('hyphenation.example.en.tex', this); %>
+<%- include('siunitx.example.en.tex', this); %>
+<% if (enquotes == 'csquotes')  { %><%- include('csquotes.example.en.tex', this); %><% } -%>
+<% if (enquotes == 'plainlatex')  { %><%- include('plainlatex.enquotes.example.de.tex', this); %><% } -%>
+<%- include('cleveref.example.en.tex', this); %>
 <%- include('figure.example.de.tex', this); %>
+<%- include('tables.example.en.tex', this); %>
 <%- include('listings.example.de.tex', this); %>
+<%- include('paralist.example.en.tex', this); %>
+<%- include('otherfeatures.example.en.tex', this); %>
+<% } -%>
+
+<% if (documentclass == 'lncs') { -%>
+\section{Zusammenfassung und Ausblick}
+\label{sec:outlook}
+\lipsum[1-2]
+
+\subsubsection*{Danksagungen}
+\ldots
+
+In the bibliography, use \texttt{\textbackslash textsuperscript} for <%- bquote %>st<%- equote %>, <%- bquote %>nd<%- equote %>, \ldots:
+E.g., <%- bquote %>The 2\textsuperscript{nd} conference on examples<%- equote %>.
+When you use \href{https://www.jabref.org}{JabRef}, you can use the clean up command to achieve that.
+See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the cleanup functionality.
+
+\renewcommand{\bibsection}{\section*{Literatur}} % requried for natbib to have "References" printed and as section*, not chapter*
+% Use natbib compatbile splncsnat style.
+% It does provide all features of splncs03, but is developed in a clean way.
+% Source: http://phaseportrait.blogspot.de/2011/02/natbib-compatible-bibtex-style-bst-file.html
+\bibliographystyle{splncsnat}
+\begingroup
+  \microtypecontext{expansion=sloppy}
+  \small % ensure correct font size for the bibliography
+  \bibliography{bibliography}
+\endgroup
+
+% Enfore empty line after bibliography
+\ \\
+%
+Alle Links wurden zuletzt am 29.03.2021 geprüft.
 <% } -%>
 
 \end{document}
