--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -1,18 +1,48 @@
+<% if (documentclass == 'lncs') { -%>
+% This template has been tested with LLNCS DOCUMENT CLASS -- version 2.20 (10-Mar-2018)
+
+<% } -%>
 % !TeX spellcheck = en-US
 % !TeX encoding = utf8
 % !TeX program = <%= latexcompiler %>
+<% if (requiresShellEscape) { -%>
+% !TeX TXS-program:compile = txs:///<%= latexcompiler %>/[--shell-escape]
+<% } -%>
 % !BIB program = <%= bibtextool %>
 % -*- coding:utf-8 mod:LaTeX -*-
+<% if (documentclass == 'scientific-thesis') { -%>
 
-<% if (documentclass === 'scientific-thesis') { -%>
 % EN: The following package allows \\ at the title page
 %     For more information see https://github.com/latextemplates/scientific-thesis-cover/issues/4
 \RequirePackage{kvoptions-patch}
 <% } -%>
+<% if (documentclass == 'lncs') { -%>
 
+% "a4paper" enables:
+%
+%  - easy print out on DIN A4 paper size
+%
+% One can configure a4 vs. letter in the LaTeX installation. So it is configuration dependend, what the paper size will be.
+% This option  present, because the current word template offered by Springer is DIN A4.
+% We accept that DIN A4 cause WTFs at persons not used to A4 in USA.
+%
+% "runningheads" enables:
+%
+%  - page number on page 2 onwards
+%  - title/authors on even/odd pages
+%
+% This is good for other readers to enable proper archiving among other papers and pointing to
+% content. Even if the title page states the title, when printed and stored in a folder, when
+% blindly opening the folder, one could hit not the title page, but an arbitrary page. Therefore,
+% it is good to have title printed on the pages, too.
+%
+% To disable outputting page headers and footers, remove "runningheads"
+\documentclass[runningheads,a4paper,english]{llncs}[2018/03/10]
+<% } else {-%>
 \documentclass[
   % fontsize=11pt is the standard
   numbers=noenddot,
+  english,  % English as main language; this parameter is passed to other packages (e.g., selnolig in the case of lualatex)
   a4paper,  % Standard format - only KOMAScript uses paper=a4 - https://tex.stackexchange.com/a/61044/9075
   twoside,  % we are optimizing for both screen and two-side printing. So the page numbers will jump, but the content is configured to stay in the middle (by using the geometry package)
   bibliography=totoc,
@@ -24,16 +54,6 @@
   %               draft    % um zu sehen, wo noch nachgebessert werden muss - wichtig, da Bindungskorrektur mit drin
   draft=false
 ]{scrbook}
-
-<% if (latexcompiler == "pdflatex") { -%>
-% Enable copy and paste of text from the PDF
-% Only required for pdflatex. It "just works" in the case of lualatex.
-% mmap enables mathematical symbols, but does not work with the newtx font set
-% See: https://tex.stackexchange.com/a/64457/9075
-% Other solutions outlined at http://goemonx.blogspot.de/2012/01/pdflatex-ligaturen-und-copynpaste.html and http://tex.stackexchange.com/questions/4397/make-ligatures-in-linux-libertine-copyable-and-searchable
-% Trouble shooting outlined at https://tex.stackexchange.com/a/100618/9075
-\usepackage{cmap}
-% TODO: check font
 <% } -%>
 
 % backticks (`) are rendered as such in verbatim environments.
@@ -47,21 +67,188 @@
 <%- include('url.preamble.en.tex', this); %>
 <%- include('font.preamble.en.tex', this); %>
 <%- include('microtype.preamble.en.tex', this); %>
+\usepackage{graphicx}
+
+<% if (enquotes == 'csquotes')  { %><%- include('csquotes.preamble.en.tex', this); %><% } -%>
+<% if (enquotes == 'textcmds')  { %><%- include('textcmds.preamble.en.tex', this); %><% } -%>
+
+<%- include('diagbox.preamble.en.tex', this); -%>
+
+<%# Required for package pdfcomment later -%>
+\usepackage{xcolor}
+
 <%- include('listings.preamble.en.tex', this); %>
+<%- include('booktabs.preamble.en.tex', this); %>
+<%- include('paralist.preamble.en.tex', this); %>
+<% if (documentclass == 'lncs')  { -%>
+<%- include('floatflt.preamble.en.tex', this); %>
+% Bibliopgraphy enhancements
+%  - enable \cite[prenote][]{ref}
+%  - enable \cite{ref1,ref2}
+% Alternative: \usepackage{cite}, which enables \cite{ref1, ref2} only (otherwise: Error message: "White space in argument")
+
+% Doc: http://texdoc.net/natbib
+\usepackage[%
+  square,        % for square brackets
+  comma,         % use commas as separators
+  numbers,       % for numerical citations;
+%  sort,          % orders multiple citations into the sequence in which they appear in the list of references;
+  sort&compress, % as sort but in addition multiple numerical citations
+                 % are compressed if possible (as 3-6, 15);
+]{natbib}
+% In the bibliography, references have to be formatted as 1., 2., ... not [1], [2], ...
+\renewcommand{\bibnumfmt}[1]{#1.}
+
+% Prepare more space-saving rendering of the bibliography
+% Source: https://tex.stackexchange.com/a/280936/9075
+\SetExpansion
+[ context = sloppy,
+  stretch = 30,
+  shrink = 60,
+  step = 5 ]
+{ encoding = {OT1,T1,TS1} }
+{ }
+<% } -%>
+<% if (todo == 'pdfcomment') { -%>
+<%- include('pdfcomment.preamble.en.tex', this); %>
+<% } else { -%>
+<%- include('plainlatextodo.preamble.en.tex', this); %>
+<% } -%>
+
+% Put footnotes below floats
+% Source: https://tex.stackexchange.com/a/32993/9075
+\usepackage{stfloats}
+\fnbelowfloat
+
+<%- include('siunitx.preamble.en.tex'); %>
 <%- include('hyperref.preamble.en.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.en.tex', this); %><% } -%>
+
 <% if (useExampleEnvironment) { -%>
 \usepackage{currfile}
 \usepackage{tcolorbox}
 \tcbuselibrary{listings}
 <% } -%>
+<% if (examples) { -%>
+
+% For demonstration purposes only
+% These packages can be removed when all examples have been deleted
+\usepackage[math]{blindtext}
+\usepackage{mwe}
+<% } -%>
+
+<%- include('powerset.preamble.en.tex', this); %>
+
+\usepackage{xspace}
+%\newcommand{\eg}{e.\,g.\xspace}
+%\newcommand{\ie}{i.\,e.\xspace}
+\newcommand{\eg}{e.\,g.,\ }
+\newcommand{\ie}{i.\,e.,\ }
+
+% Enable hyphenation at other places as the dash.
+% Example: applicaiton\hydash specific
+\makeatletter
+\newcommand{\hydash}{\penalty\@M-\hskip\z@skip}
+% Definition of "= taken from http://mirror.ctan.org/macros/latex/contrib/babel-contrib/german/ngermanb.dtx
+\makeatother
+
+% correct bad hyphenation here
+\hyphenation{op-tical net-works semi-conduc-tor}
+<% if (documentclass == 'lncs') { -%>
+
+% Add copyright
+% Do that for the final version or if you send it to colleagues
+\iffalse
+  %state: intended|submitted|llncs
+  %you can add "crop" if the paper should be cropped to the format Springer is publishing
+  \usepackage[intended]{llncsconf}
+
+  \conference{name of the conference}
+
+  %in case of "llncs" (final version!)
+  %example: llncs{Anonymous et al. (eds). \emph{Proceedings of the International Conference on \LaTeX-Hacks}, LNCS~42. Some Publisher, 2016.}{0042}
+  \llncs{book editors and title}{0042} %% 0042 is the start page
+\fi
+<% } -%>
+<% if (latexcompiler == "pdflatex") { -%>
+
+% Enable copy and paste of text from the PDF
+% Only required for pdflatex. It "just works" in the case of lualatex.
+% Alternative: cmap or mmap package
+% mmap enables mathematical symbols, but does not work with the newtx font set
+% See: https://tex.stackexchange.com/a/64457/9075
+% Other solutions outlined at http://goemonx.blogspot.de/2012/01/pdflatex-ligaturen-und-copynpaste.html and http://tex.stackexchange.com/questions/4397/make-ligatures-in-linux-libertine-copyable-and-searchable
+% Trouble shooting outlined at https://tex.stackexchange.com/a/100618/9075
+%
+% According to https://tex.stackexchange.com/q/451235/9075 this is the way to go
+\input glyphtounicode
+\pdfgentounicode=1
+<% } -%>
 
 \begin{document}
+<% if (documentclass == 'lncs') { -%>
+
+\title{Paper Title}
+% If Title is too long, use \titlerunning
+%\titlerunning{Short Title}
+
+% Single insitute
+\author{Firstname Lastname \and Firstname Lastname}
+
+% If there are too many authors, use \authorrunning
+%\authorrunning{First Author et al.}
+
+\institute{Institute}
+
+%% Multiple insitutes - ALTERNATIVE to the above
+% \author{%
+%     Firstname Lastname\inst{1} \and
+%     Firstname Lastname\inst{2}
+% }
+%
+%If there are too many authors, use \authorrunning
+%  \authorrunning{First Author et al.}
+%
+%  \institute{
+%      Insitute 1\\
+%      \email{...}\and
+%      Insitute 2\\
+%      \email{...}
+%}
+
+\maketitle
+
+\begin{abstract}
+  \lipsum[1]
+\end{abstract}
+
+\begin{keywords}
+  keyword1, keyword2
+\end{keywords}
+
+\section{Introduction}
+\label{sec:intro}
+\lipsum[1-3]\todo{Refine me}
+
+The remainder of the paper starts with a presentation of related work (\cref{sec:relatedwork}).
+<% if (examples) { %>It is followed by a presentation of hints on \LaTeX{} (\cref{sec:latexhints}).<% } -%>
+Finally, a conclusion is drawn and outlook on future work is made (\cref{sec:outlook}).
+
+\section{Related Work}
+\label{sec:relatedwork}
+
+Winery~\cite{Winery} is a graphical \commentontext{modeling}{modeling with one ``l'', because of AE} tool.
+The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } else { %>Binz et al.~\cite<% } %>{Binz2009}.
+<% } -%>
 
 <% if (examples) { -%>
 
 <%= heading1 %>{LaTeX Hints}
+<% if (documentclass == 'lncs') { -%>
+\label{sec:latexhints}
+<% } else { -%>
 \label{chap:latexhints}
+<% } -%>
 
 <% if (useExampleEnvironment) { -%>
 % Required for proper example rendering in the compiled PDF
@@ -82,7 +269,9 @@
   left=8mm,
   title=Corresponding \LaTeX{} code of \texttt{\currfilepath},
   listing options={%
+    frame=none,
     language={[LaTeX]TeX},
+    escapeinside={},
     firstline=\the\LTGbeginlineexample,
     lastline=\the\LTGendlineexample,
     firstnumber=\the\LTGbeginlineexample,
@@ -102,8 +291,46 @@ This <% if (heading1 == "\\chapter") {%>chapter<% } else { %>section<% } %> cont
 It focuses on minimal examples, which can be directly adapted to the content
 
 <%- include('paragraphs.example.en.tex', this); %>
+<%- include('hyphenation.example.en.tex', this); %>
+<%- include('siunitx.example.en.tex', this); %>
+<% if (enquotes == 'csquotes')  { %><%- include('csquotes.example.en.tex', this); %><% } -%>
+<% if (enquotes == 'textcmds')  { %><%- include('textcmds.example.en.tex', this); %><% } -%>
+<% if (enquotes == 'plainlatex')  { %><%- include('plainlatex.enquotes.example.en.tex', this); %><% } -%>
+<%- include('cleveref.example.en.tex', this); %>
 <%- include('figure.example.en.tex', this); %>
+<%- include('tables.example.en.tex', this); %>
 <%- include('listings.example.en.tex', this); %>
+<%- include('paralist.example.en.tex', this); %>
+<%- include('otherfeatures.example.en.tex', this); %>
 <% } -%>
 
+<% if (documentclass == 'lncs') { -%>
+\section{Conclusion and Outlook}
+\label{sec:outlook}
+\lipsum[1-2]
+
+\subsubsection*{Acknowledgments}
+\ldots
+
+In the bibliography, use \texttt{\textbackslash textsuperscript} for <%- bquote %>st<%- equote %>, <%- bquote %>nd<%- equote %>, \ldots:
+E.g., <%- bquote %>The 2\textsuperscript{nd} conference on examples<%- equote %>.
+When you use \href{https://www.jabref.org}{JabRef}, you can use the clean up command to achieve that.
+See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the cleanup functionality.
+
+\renewcommand{\bibsection}{\section*{References}} % requried for natbib to have "References" printed and as section*, not chapter*
+% Use natbib compatbile splncsnat style.
+% It does provide all features of splncs03, but is developed in a clean way.
+% Source: http://phaseportrait.blogspot.de/2011/02/natbib-compatible-bibtex-style-bst-file.html
+\bibliographystyle{splncsnat}
+\begingroup
+  \microtypecontext{expansion=sloppy}
+  \small % ensure correct font size for the bibliography
+  \bibliography{bibliography}
+\endgroup
+
+% Enfore empty line after bibliography
+\ \\
+%
+All links were last followed on October 5, 2020.
+<% } -%>
 \end{document}
