Refine support for siunitx by adding texlive 2021

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -41,9 +41,9 @@
 % Normal scaling is too large --> thus, we use ",Scale=.9"
 \setmonofont[StylisticSet={1,3},Scale=.9]{Inconsolatazi4}
 <% } -%>
-<% } else if (texlive == "tl2019") { -%>
+<% } else if (texlive == 2019) { -%>
 <%# no special configuration required for lualatex to use the LaTeX default font.
-  # See https://tex.stackexchange.com/a/423225/9075 for details
+    See https://tex.stackexchange.com/a/423225/9075 for details
 -%>
 <% } else { -%>
 <%# -%>
