--- a/generators/app/templates/siunitx.example.en.tex
+++ b/generators/app/templates/siunitx.example.en.tex
@@ -10,3 +10,7 @@ $100 \frac{\mathit{km}}{h}$.
 <%- bexample %>
 \SI{5}{\percent} of \SI{10}{kg}
 <%- eexample %>
+
+<%- bexample %>
+Numbers are automatically grouped: \num{123456}.
+<%- eexample %>
