--- a/generators/app/templates/siunitx.preamble.en.tex
+++ b/generators/app/templates/siunitx.preamble.en.tex
@@ -1,1 +1,7 @@
+<% if (texlive == 2019) { -%>
 \usepackage[group-four-digits,per-mode=fraction]{siunitx}
+<% } else { -%>
+\usepackage[group-minimum-digits=4,per-mode=fraction]{siunitx}
+<% } -%>
+
+\addto\extrasgerman{\sisetup{locale = DE}}
