Create paper.tex instead of main.tex in the case of papers

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -305,7 +305,7 @@ See \url{https://help.jabref.org/en/CleanupEntries} for an overview of the clean
 \begingroup
   \microtypecontext{expansion=sloppy}
   \small % ensure correct font size for the bibliography
-  \bibliography{bibliography}
+  \bibliography{<%= filenames.bib %>}
 \endgroup
 
 % Enfore empty line after bibliography
