Add hint on manual spacing tweaks

--- a/generators/app/templates/listings.example.en.tex
+++ b/generators/app/templates/listings.example.en.tex
@@ -20,6 +20,9 @@ One can also add \verb+float+ as paramter to have the listing floating.
 
 <%- bexample %>
 \begin{lstlisting}[
+  % one can adjust spacing here if required
+  % aboveskip=2.5\baselineskip,
+  % belowskip=-.8\baselineskip,
   float,
   language=XML,
   caption={Example XML Listing -- placed as floating figure},
