--- a/generators/app/templates/listings.example.en.tex
+++ b/generators/app/templates/listings.example.en.tex
@@ -25,7 +25,7 @@ One can also add \verb+float+ as paramter to have the listing floating.
   % belowskip=-.8\baselineskip,
   float,
   language=XML,
-  caption={Example XML Listing -- placed as floating figure},
+  caption={Example XML listing -- placed as floating figure},
   label={lst:flXML}]
 <listing name="example">
   Floating
@@ -33,29 +33,29 @@ One can also add \verb+float+ as paramter to have the listing floating.
 \end{lstlisting}
 <%- eexample %>
 
-One can also typeset JSON as shown in <% if (cleveref) { %>\cref<% } else { %>Listing~<% } %>{lst:flJSON}.
+One can also typeset JSON as shown in <% if (cleveref) { %>\cref<% } else { %>Listing~<% } %>{lst:json}.
 
 <%- bexample %>
 \begin{lstlisting}[
   float,
   language=json,
-  caption={Example JSON Listing -- placed as floating figure},
-  label={lst:flJSON}]
+  caption={Example JSON listing -- placed as floating figure},
+  label={lst:json}]
 {
   key: "value"
 }
 \end{lstlisting}
 <%- eexample %>
 
-Java is also possible as shown in <% if (cleveref) { %>\cref<% } else { %>Listing~<% } %>{lst:flJava}.
+Java is also possible as shown in <% if (cleveref) { %>\cref<% } else { %>Listing~<% } %>{lst:java}.
 
 <%- bexample %>
 \begin{lstlisting}[
   % one can adjust spacing here if required
   % aboveskip=2.5\baselineskip,
   % belowskip=-.8\baselineskip,
-  caption={Example Java Listing},
-  label=lst:flJava,
+  caption={Example Java listing},
+  label=lst:java,
   language=Java,
   float]
 public class Hello {
