Prepare tcolorbox for minted

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -128,7 +128,7 @@
 <% if (useExampleEnvironment) { -%>
 \usepackage{currfile}
 \usepackage{tcolorbox}
-\tcbuselibrary{listings}
+\tcbuselibrary{<%= listings %>}
 <% } -%>
 <% if (examples) { -%>
 
