Fix minted inclusions

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -70,7 +70,11 @@
 <%# Required for package pdfcomment later -%>
 \usepackage{xcolor}
 
+<% if (listings == 'listings') { -%>
 <%- include('listings.preamble.de.tex', this); %>
+<% } else { -%>
+<%- include('minted.preamble.en.tex', this); %>
+<% } -%>
 <%- include('booktabs.preamble.en.tex', this); %>
 <%- include('paralist.preamble.en.tex', this); %>
 <% if (documentclass == 'lncs')  { -%>
@@ -280,7 +284,11 @@ Hier sollen allgemeine \LaTeX-Hinweise gegeben werden, damit man Minimalbeispiel
 <%- include('cleveref.example.en.tex', this); %>
 <%- include('figure.example.de.tex', this); %>
 <%- include('tables.example.en.tex', this); %>
+<% if (listings == 'listings') { -%>
 <%- include('listings.example.de.tex', this); %>
+<% } else { -%>
+<%- include('minted.example.en.tex', this); %>
+<% } -%>
 <%- include('paralist.example.en.tex', this); %>
 <%- include('otherfeatures.example.en.tex', this); %>
 <% } -%>
