--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -77,7 +77,7 @@
 <%# Required for package pdfcomment later -%>
 \usepackage{xcolor}
 
-<%- include('listings.preamble.en.tex', this); %>
+<%- include(listings + '.preamble.en.tex', this); %>
 <%- include('booktabs.preamble.en.tex', this); %>
 <%- include('paralist.preamble.en.tex', this); %>
 <% if (documentclass == 'lncs')  { -%>
@@ -301,7 +301,11 @@ It focuses on minimal examples, which can be directly adapted to the content
 <%- include('cleveref.example.en.tex', this); %>
 <%- include('figure.example.en.tex', this); %>
 <%- include('tables.example.en.tex', this); %>
+<% if (listings == 'listings') { -%>
 <%- include('listings.example.en.tex', this); %>
+<% } else { -%>
+<%- include('minted.example.en.tex', this); %>
+<% } -%>
 <%- include('paralist.example.en.tex', this); %>
 <%- include('otherfeatures.example.en.tex', this); %>
 <% } -%>
