--- a/generators/app/templates/minted.example.en.tex
+++ b/generators/app/templates/minted.example.en.tex
@@ -5,12 +5,12 @@ It uses the \href{http://pygments.org/}{pygments} library, which in turn require
 
 <%- bexample %>
 <% if (cleveref) { %>\Cref<% } else { %>Listing~\ref<% } %>{lst:XML} shows source code written in XML.
-\lref{line:comment} contains a comment.
+\refline{line:comment} contains a comment.
 
 \begin{listing}[htbp]
     \begin{minted}[linenos=true,escapeinside=||]{xml}
 <listing name="example">
-  <!-- comment --> |\Vlabel{line:comment}|
+  <!-- comment --> |\labelline{line:comment}|
   <content>not interesting</content>
 </listing>
 \end{minted}
