--- a/generators/app/templates/minted.preamble.en.tex
+++ b/generators/app/templates/minted.preamble.en.tex
@@ -24,5 +24,5 @@
 % \AtEndEnvironment{listing}{\stepcounter{lstlisting}}
 
 % Intermediate solution for hyperlinked refs. See https://tex.stackexchange.com/q/132420/9075 for more information.
-\newcommand{\Vlabel}[1]{\label[line]{#1}\hypertarget{#1}{}}
-\newcommand{\lref}[1]{\hyperlink{#1}{\FancyVerbLineautorefname~\ref*{#1}}}
+\newcommand{\labelline}[1]{\label[line]{#1}\hypertarget{#1}{}}
+\newcommand{\refline}[1]{\hyperlink{#1}{\FancyVerbLineautorefname~\ref*{#1}}}
