--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -270,6 +270,7 @@ The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } e
   coltext=black!90,
   left=8mm,
   title=Corresponding \LaTeX{} code of \texttt{\currfilepath},
+<% if (listings == 'listings') { -%>
   listing options={%
     frame=none,
     language={[LaTeX]TeX},
@@ -285,6 +286,18 @@ The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } e
     numberstyle=\tiny,
     numbersep=8pt%
   }
+<% } else { -%>
+    minted language=TeX,
+    minted style=vs,
+    minted options={
+      firstline=\the\LTGbeginlineexample,
+      lastline=\the\LTGendlineexample,
+      firstnumber=\the\LTGbeginlineexample,
+      breaklines,
+      linenos,
+      numbersep=8pt
+    }
+<% } -%>
 }
 }%
 <% } -%>
