Fix missing end example

--- a/generators/app/templates/minted.example.en.tex
+++ b/generators/app/templates/minted.example.en.tex
@@ -31,6 +31,7 @@ One can also typeset JSON as shown in <% if (cleveref) { %>\cref<% } else { %>Li
   \caption{Example JSON listing using minted}
   \label{lst:flJSON}
 \end{listing}
+<%- eexample %>
 
 Java is also possible as shown in <% if (cleveref) { %>\cref<% } else { %>Listing~<% } %>{lst:flJava}.
 
