Adjust font size

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -290,6 +290,7 @@ The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } e
     minted language=TeX,
     minted style=vs,
     minted options={
+      fontsize=\footnotesize,
       firstline=\the\LTGbeginlineexample,
       lastline=\the\LTGendlineexample,
       firstnumber=\the\LTGbeginlineexample,
