Avoid string concatination at include

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -77,7 +77,11 @@
 <%# Required for package pdfcomment later -%>
 \usepackage{xcolor}
 
-<%- include(listings + '.preamble.en.tex', this); %>
+<% if (listings == 'listings') { -%>
+<%- include('listings.preamble.en.tex', this); %>
+<% } else { -%>
+<%- include('minted.preamble.en.tex', this); %>
+<% } -%>
 <%- include('booktabs.preamble.en.tex', this); %>
 <%- include('paralist.preamble.en.tex', this); %>
 <% if (documentclass == 'lncs')  { -%>
