Fix order of loading of csquotes

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -63,8 +63,6 @@
 <%- include('microtype.preamble.de.tex', this); %>
 \usepackage{graphicx}
 
-<% if (enquotes == 'csquotes')  { %><%- include('csquotes.preamble.en.tex', this); %><% } -%>
-
 <%- include('diagbox.preamble.en.tex', this); -%>
 
 <%# Required for package pdfcomment later -%>
@@ -75,6 +73,10 @@
 <% } else { -%>
 <%- include('minted.preamble.en.tex', this); %>
 <% } -%>
+
+<% if (enquotes == 'csquotes')  { %><%- include('csquotes.preamble.en.tex', this); %><% } -%>
+<% if (enquotes == 'textcmds')  { %><%- include('textcmds.preamble.en.tex', this); %><% } -%>
+
 <%- include('booktabs.preamble.en.tex', this); %>
 <%- include('paralist.preamble.en.tex', this); %>
 <% if (documentclass == 'lncs')  { -%>
