--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -74,11 +74,19 @@
 <%# Required for package pdfcomment later -%>
 \usepackage{xcolor}
 
+DEBUG:BEFORE
+
 <% if (listings == 'listings') { -%>
+DEBUG:LISTINGS1
 <%- include('listings.preamble.en.tex', this); %>
+DEBUG:LISTINGS2
 <% } else { -%>
+DEBUG:MINTED1
 <%- include('minted.preamble.en.tex', this); %>
+DEBUG:MINTED2
 <% } -%>
+
+DEBUG:AFTER
 
 <% if (enquotes == 'csquotes')  { %><%- include('csquotes.preamble.en.tex', this); %><% } -%>
 <% if (enquotes == 'textcmds')  { %><%- include('textcmds.preamble.en.tex', this); %><% } -%>
