--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -81,6 +81,9 @@ DEBUG:LISTINGS1
 <%- include('listings.preamble.en.tex', this); %>
 DEBUG:LISTINGS2
 <% } else { -%>
+
+Listings is >>><%= listings %><<<
+
 DEBUG:MINTED1
 <%- include('minted.preamble.en.tex', this); %>
 DEBUG:MINTED2
