Add missing package lipsum (and fix order also in main.en.tex)

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -124,6 +124,7 @@
 <%- include('hyperref.preamble.de.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.de.tex', this); %><% } -%>
 
+\usepackage{lipsum}
 <% if (examples) { -%>
 
 % For demonstration purposes only
