--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -130,17 +130,18 @@
 <%- include('hyperref.preamble.en.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.en.tex', this); %><% } -%>
 
-<% if (useExampleEnvironment) { -%>
-\usepackage{currfile}
-\usepackage{tcolorbox}
-\tcbuselibrary{<%= listings %>}
-<% } -%>
+\usepackage{lipsum}
 <% if (examples) { -%>
 
 % For demonstration purposes only
 % These packages can be removed when all examples have been deleted
 \usepackage[math]{blindtext}
 \usepackage{mwe}
+<% if (useExampleEnvironment) { -%>
+\usepackage{currfile}
+\usepackage{tcolorbox}
+\tcbuselibrary{<%= listings %>}
+<% } -%>
 <% } -%>
 
 <%- include('powerset.preamble.en.tex', this); %>
