Fix \tcbuselibrary for German

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -134,7 +134,7 @@
 <% if (useExampleEnvironment) { -%>
 \usepackage{currfile}
 \usepackage{tcolorbox}
-\tcbuselibrary{listings}
+\tcbuselibrary{<%= listings %>}
 <% } -%>
 <% } -%>
 
