Fix German + cleveref + minted

--- a/generators/app/templates/cleveref.preamble.de.tex
+++ b/generators/app/templates/cleveref.preamble.de.tex
@@ -7,13 +7,13 @@
 \crefname{table}{Tabelle}{Tabellen}
 <% } -%>
 \Crefname{table}{Tabelle}{Tabellen}
-\crefname{figure}{\figurename}{\figurename}
+\crefname{figure}{Abbildung}{Abbildungen}
 \Crefname{figure}{Abbildung}{Abbildungen}
 \crefname{equation}{Gleichung}{Gleichungen}
 \Crefname{equation}{Gleichung}{Gleichungen}
 \crefname{theorem}{Theorem}{Theoreme}
 \Crefname{theorem}{Theorem}{Theoreme}
-\crefname{listing}{\lstlistingname}{\lstlistingname}
+\crefname{listing}{Listing}{Listings}
 \Crefname{listing}{Listing}{Listings}
 \crefname{section}{Abschnitt}{Abschnitte}
 \Crefname{section}{Abschnitt}{Abschnitte}
