--- a/generators/app/templates/listings.preamble.de.tex
+++ b/generators/app/templates/listings.preamble.de.tex
@@ -89,9 +89,9 @@
   {ű}{{\H{u}}}1 {Ű}{{\H{U}}}1 {ő}{{\H{o}}}1 {Ő}{{\H{O}}}1
   {ç}{{\c c}}1 {Ç}{{\c C}}1 {ø}{{\o}}1 {å}{{\r a}}1 {Å}{{\r A}}1
 }
+<% if (documentclass == 'lncs' && listings == 'listings+minted') { -%>
 
-<% if (documentclass == 'lncs') { -%>
-\renewcommand{\lstlistingname}{List.}
+%\renewcommand{\lstlistingname}{List.}
 
 % Fix counter wie bei https://tex.stackexchange.com/a/28334/9075 beschrieben
 \usepackage{chngcntr}
