--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -315,10 +315,10 @@ It focuses on minimal examples, which can be directly adapted to the content
 <%- include('paragraphs.example.en.tex', this); %>
 <%- include('hyphenation.example.en.tex', this); %>
 <%- include('siunitx.example.en.tex', this); %>
-<% if (enquotes == 'csquotes')  { %><%- include('csquotes.example.en.tex', this); %><% } -%>
-<% if (enquotes == 'textcmds')  { %><%- include('textcmds.example.en.tex', this); %><% } -%>
-<% if (enquotes == 'plainlatex')  { %><%- include('plainlatex.enquotes.example.en.tex', this); %><% } -%>
-<%- include('cleveref.example.en.tex', this); %>
+<% if (enquotes == 'csquotes') { %><%- include('csquotes.example.en.tex', this); %><% } -%>
+<% if (enquotes == 'textcmds') { %><%- include('textcmds.example.en.tex', this); %><% } -%>
+<% if (enquotes == 'plainlatex') { %><%- include('plainlatex.enquotes.example.en.tex', this); %><% } -%>
+<% if (cleveref) { %><%- include('cleveref.example.en.tex', this); %><% } -%>
 <%- include('figure.example.en.tex', this); %>
 <%- include('tables.example.en.tex', this); %>
 <% if (listings == 'listings') { -%>
