Add acks for Dirk's texts

--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -615,7 +615,11 @@ You should explicitly discuss limitations and shortcomings of your work and deta
 <% if (documentclass == 'lncs') { -%>
 
 \subsubsection*{Acknowledgments}
+<% if (howtotext) { -%>
+The hints on writing a paper/thesis are taken from Dirk Fahland's \href{https://github.com/dfahland/Master-or-Bachelor-thesis-Template-Eindhoven-University-of-Technology}{LaTeX template for Bachelor and Master theses at Eindhoven University of Technology}.
+<% } else { -%>
 \ldots
+<% } -%>
 <% } -%>
 
 %%% ===============================================================================
