Add support for ieee_variant and papersize
Additionally:

- Make bibtex default for IEEE and LNCS

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -92,7 +92,6 @@ pdflatex
 <%# -%>
 
 % Headings are typset in Helvetica (which is similar to Arial)
-% DE: Schriftart fuer die Ueberschriften - ueberschreibt lmodern
 \usepackage[scaled=.95]{helvet}
 <% break; case "times": -%>
 <%# Times New Roman and pdflatex -%>
@@ -104,7 +103,7 @@ pdflatex
 <%# Computer Modern and pdflatex -%>
 <%# -%>
 <% if (documentclass === 'ieee') { -%>
-<%# The default font configuration of the IEEE template is used.
+<%# The default font configuration (Palatino/Palladio) of the IEEE template is used.
     In addition, we make the code appear more nice -%>
 
 % use nicer font for code
