--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -48,7 +48,8 @@ break;
 case "ieee": -%>
 
 % DO NOT DOWNLOAD IEEEtran.cls - Use the one of your LaTeX distribution
-\documentclass[conference,compsoc]{IEEEtran}[2015/08/26]
+% For the final version, replace "draftcls" by "final"
+\documentclass[draftcls,<%= ieee_variant %>,<%= papersize %>paper]{IEEEtran}[2015/08/26]
 
 % Balance the last page
 % The pbalance package (see https://ctan.org/pkg/pbalance) "just works" (in contrast to balance.sty or other solutions)
