Initial subfig configuration

--- a/generators/app/templates/cleveref.preamble.en.tex
+++ b/generators/app/templates/cleveref.preamble.en.tex
@@ -15,4 +15,7 @@
 % Intermediate solution for hyperlinked refs. See https://tex.stackexchange.com/q/132420/9075 for more information.
 \newcommand{\llabel}[1]{\label[line]{#1}\hypertarget{#1}{}}
 \newcommand{\lref}[1]{\hyperlink{#1}{\FancyVerbLineautorefname~\ref*{#1}}}
+<% } else { -%>
+\crefname{lstlisting}{Listing}{Listings}
+\Crefname{lstlisting}{Listing}{Listings}
 <% } -%>
