--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -133,6 +133,7 @@ default:  -%>
 
 <%- include('siunitx.preamble.en.tex'); %>
 <%- include('hyperref.preamble.en.tex', this); %>
+<%- include('subfig.preamble.en.tex', this); %>
 <% if (cleveref) { %><%- include('cleveref.preamble.en.tex', this); %><% } -%>
 
 \usepackage{lipsum}
