Fix compilation error

--- a/generators/app/templates/natbib.preamble.en.tex
+++ b/generators/app/templates/natbib.preamble.en.tex
@@ -17,7 +17,7 @@
                 % are compressed if possible (as 3-6, 15);
 ]{natbib}
 <% } else { -%>
-<# normal IEEE or LNCS -%>
+<%# normal IEEE or LNCS -%>
 \usepackage[%
   square,        % for square brackets
   comma,         % use commas as separators
